# trunk-sim

./: .gitignore  README.md  analyse_dataset_distribution.py  collect_data_autonomous.py  collect_data_autonomous_lambda.py  collect_data_contr_circle_lambda.py  collect_data_contr_circle_lambda_faster.py  collect_data_contr_circle_lambda_sym.py  collect_data_contr_sin_lambda.py  data_generation_utils.py  dataset_two_inputs_larger.py  find_steady_state.py  helper_script_cable.py  pyproject.toml  trunk.xml  two_datasets_two_inputs.py  two_datasets_with_out_lambda.py
not_useful_anymore/: Learn_first_SSM.py  collect_data_controlled_sinusoidal.py  scale_csv_datasets.py  simple_trunk_simulation.py  visualize_model.py
scripts/: generate_data.py  generate_inputs.py  render_mujoco_model.py  view_model.py
src/trunk_sim/: data.py  generate_trunk_model.py  policies.py  policy.py  rollout.py  simulator.py  visualization.py
src/trunk_sim/models/: cable_trunk_expanded_8.xml  cable_trunk_expanded_old.xml  cable_trunk_expanded_old_4_tendons.xml  cable_trunk_unexpanded.xml
tests/: test_data.py  test_simulator.py
